<resources>
    <string name="app_name">MusicWizard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="lyrics">Lyrics</string>
    <string name="library">Library</string>
    <string name="concerts">Concerts</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="create_an_account">create an account</string>
    <string name="album_cover">album cover</string>
    <string name="log_in_to_spotify">log in to spotify</string>
    <string name="title_activity_lyric">LyricActivity</string>
    <string name="search_concerts">Search concerts...</string>
    <string name="event_name">Event Name</string>
    <string name="event_time">Event Time</string>
    <string name="event_venue">Event Venue</string>
    <string name="event_discription">Event Discription</string>
    <string name="event_location">Event Location</string>
</resources>
